# fallow-py

./: .fallow-py.toml  .gitignore  .pyfallow.toml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
.forgejo/workflows/: ci.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  false_positive.md  feature_request.md
.github/workflows/: ci.yml  release.yml
benchmarks/analysis-profile/: README.md  run.py
benchmarks/comparison/: README.md  repos.toml  run.py  tools.toml
benchmarks/fp-cases/: README.md
benchmarks/fp-cases/celery-shared-task/: EXPECTED.md  expected.json  pyproject.toml
benchmarks/fp-cases/celery-shared-task/src/: tasks.py
benchmarks/fp-cases/dataclass-only-fields/: EXPECTED.md  expected.json  pyproject.toml
benchmarks/fp-cases/dataclass-only-fields/src/: app.py
benchmarks/fp-cases/django-management-command/: EXPECTED.md  expected.json  pyproject.toml
benchmarks/fp-cases/django-management-command/myapp/management/commands/: cleanup.py
benchmarks/fp-cases/fastapi-route/: EXPECTED.md  expected.json  pyproject.toml
benchmarks/fp-cases/fastapi-route/app/: main.py
benchmarks/fp-cases/namespace-package-ambiguity/: EXPECTED.md  expected.json  pyproject.toml
benchmarks/fp-cases/namespace-package-ambiguity/alt/pkg/: amb.py
benchmarks/fp-cases/namespace-package-ambiguity/src/: app.py
benchmarks/fp-cases/namespace-package-ambiguity/src/pkg/: amb.py
benchmarks/fp-cases/optional-dependency-guard/: EXPECTED.md  expected.json  pyproject.toml
benchmarks/fp-cases/optional-dependency-guard/src/: app.py
benchmarks/fp-cases/package-public-api/: EXPECTED.md  expected.json  pyproject.toml
benchmarks/fp-cases/package-public-api/src/: app.py
benchmarks/fp-cases/package-public-api/src/lib/: __init__.py
benchmarks/fp-cases/protocol-class/: EXPECTED.md  expected.json
benchmarks/fp-cases/protocol-class/src/: app.py
benchmarks/fp-cases/type-checking-only-import/: EXPECTED.md  expected.json  pyproject.toml
benchmarks/fp-cases/type-checking-only-import/src/: app.py
benchmarks/soak/: README.md  models.toml  repos.toml  run.py
decisions/: 0001-classification-namespace-underscore.md  0002-baseline-validation-config-error.md  0003-forgejo-runner-ubuntu-latest.md  0004-test-normalize-dataclass-branch.md  0005-alpha-incremental-release.md  0006-dogfood-pivot-anti-slop.md  0007-pyfallow-as-deterministic-gate.md  0008-phase-b-c-evidence-gated.md  0009-three-bucket-classification.md  0010-mandatory-non-author-reviewer.md  0011-forgejo-native-ci-pattern.md  0012-umbrella-branding-fallow.md  README.md
docs/: agent-integration.md  architecture.md  calibration.md  dogfood-evidence-status.md  dogfood-log-template.md  dogfood.md  fallow-integration.md  limitations.md  performance.md  philosophy.md  publishing-checklist.md  rename-plan.md  roadmap.md  schema.md
docs/audits/: deepseek-v4-pro-triage-2026-05-12.md
docs/release-notes/: 0.1.0-alpha.1.md  0.3.0a3.md
examples/ci/: README.md  forgejo-actions.yml  github-actions.yml  gitlab-ci.yml  render_pyfallow_comment.py
examples/claude-skill/fallow-py-cleanup/: README.md  SKILL.md  workflow.md
examples/claude-skill/pyfallow-cleanup/: README.md  SKILL.md  workflow.md
examples/cursor-rules/: fallow-py.mdc  pyfallow.mdc
examples/demo_project/: .fallow-py.toml  pyproject.toml
examples/demo_project/src/app/: __init__.py  cli.py  cycle_a.py  cycle_b.py  dupe_one.py  dupe_two.py  main.py  public.py  unused.py
examples/demo_project/src/app/domain/: service.py
examples/demo_project/src/app/infra/: db.py
examples/outputs/: demo-agent-context.md  demo-report.excerpt.json  demo.sarif.excerpt.json  soak-summary.example.json
mcp/: LICENSE  README.md  pyproject.toml
mcp/src/fallow_py_mcp/: __init__.py  advice.py  context.py  remediation.py  runtime.py  safety.py  schemas.py  server.py  tools.py
mcp/src/pyfallow_mcp/: __init__.py  __main__.py  advice.py  context.py  remediation.py  runtime.py  safety.py  schemas.py  server.py  tools.py
mcp/tests/: test_classification_namespace.py  test_mcp.py
schemas/: pyfallow-fix-plan.schema.json  pyfallow-report.schema.json  pyfallow-sarif.schema.json
scripts/ci/: run_python_ci.py
scripts/dogfood/: aggregate_evidence.py
src/fallow_py/: __init__.py  agent_context.py  analysis.py  boundaries.py  classify.py  cli.py  config.py  dead_code.py  dependencies.py  formatters.py  graph.py  models.py  predict.py  resolver.py  suppressions.py
src/pyfallow/: __init__.py  __main__.py  analysis.py  ast_index.py  baseline.py  ci_demo_slop.py  classify.py  cli.py  complexity.py  config.py  context.py  dead_code.py  dependencies.py  diff.py  discovery.py  dupes.py  fingerprints.py  formatters.py  frameworks.py  graph.py  models.py  paths.py  sarif.py  summary.py  suppressions.py
tests/: test_baseline.py  test_dogfood_aggregator.py  test_fp_corpus.py  test_pyfallow.py
tests/fixtures/demo_project/: pyproject.toml
tests/fixtures/demo_project/src/app/: cycle_a.py  cycle_b.py  dupe_one.py  dupe_two.py  main.py  unused.py
tests/fixtures/demo_project/src/app/domain/: service.py
tests/fixtures/demo_project/src/app/infra/: db.py
tests/golden/: demo_project_fix_plan_golden.json  demo_project_report_golden.json  demo_project_sarif_golden.json
