[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "fallow-py"
version = "0.3.0a3"
description = "Python implementation of Fallow static codebase intelligence for agents and reviewers."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "fallow-py contributors" }]
keywords = [
  "agents",
  "architecture",
  "code-intelligence",
  "dead-code",
  "dependencies",
  "python",
  "sarif",
  "static-analysis",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/pdurlej/pyfallow"
Repository = "https://github.com/pdurlej/pyfallow"
Issues = "https://github.com/pdurlej/pyfallow/issues"
Changelog = "https://github.com/pdurlej/pyfallow/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8",
  "twine>=5",
]

[project.scripts]
fallow-py = "fallow_py.cli:main"
pyfallow = "pyfallow.cli:main"
fallow = "fallow_py.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
