[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "fallow-py-mcp"
version = "0.1.0a3"
description = "MCP server for fallow-py agentic codebase intelligence."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "fallow-py contributors" }]
keywords = ["mcp", "fallow-py", "pyfallow", "static-analysis", "ai-agents", "code-intelligence"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "fastmcp>=3.2,<4",
  "pydantic>=2.11",
  "fallow-py>=0.3.0a3",
]

[project.urls]
Homepage = "https://github.com/pdurlej/pyfallow"
Repository = "https://github.com/pdurlej/pyfallow"
Issues = "https://github.com/pdurlej/pyfallow/issues"
Changelog = "https://github.com/pdurlej/pyfallow/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8",
  "twine>=5",
]

[project.scripts]
fallow-py-mcp = "fallow_py_mcp.server:main"
pyfallow-mcp = "pyfallow_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "../src"]
addopts = "-q"
